--- a/views/p2.handlebars
+++ b/views/p2.handlebars
@@ -25,16 +25,22 @@
 	}
 	</style>
 	<table style= "width: 100%">
+
+
 	<tr>
 		<td><h4>NOVICE</h4></td>
-		<td><h5>YOGU</h5></td>
+	</tr>
+	<tr>
+		<td><h5>YOGI</h5></td>
 	</tr>
 	</table>
+
+
 	</div>
 	<table style= "width:100%">
 	<tr>
-		<td><h2 id= "myProfile">PROFILE</h2></td>
-		<td><h2 id= "myFlow">FLOW</h2></td>
+		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
+		<td><h2 id= "myFlow"><a href='/flow'>FLOW</a></h2></td>
 		<td><h2 id= "myPoses">POSES</h2></td>
 	</tr>
 	</table>
