--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,15 +13,7 @@
 	</div>
 
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
-	<style>
-	table, th, td{
-		border: 1px solid black;
-		border-collapse: collapse;
-	}
-	th, td{
-		padding: 15px;
-	}
-	</style>
+	
 	<table style= "width: 100%">
 	<tr>
 		<td><h4>FLOWS DONE</h4></td>
@@ -47,8 +39,8 @@
 	</style>
 	<table style= "width:100%">
 	<tr>
-		<td><h2 id= "myProfile">PROFILE</h2></td>
-		<td><h2 id= "myFlow">FLOW</h2></td>
+		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
+		<td><h2 id= "myFlow"><a href='/flow'>FLOW</a></h2></td>
 		<td><h2 id= "myPoses">POSES</h2></td>
 	</tr>
 	</table>
