--- a/views/p2.handlebars
+++ b/views/p2.handlebars
@@ -28,10 +28,10 @@
 
 
 	<tr>
-		<td><h4>NOVICE</h4></td>
+		<td><center><a href=" /play"><div style="width: 20%; padding-top: 2%; padding-bottom: 2%; background-color: blue;"><h4>NOVICE</h4></div></a></center></td>
 	</tr>
 	<tr>
-		<td><h5>YOGI</h5></td>
+		<td><center><a href=" /play"><div style="width: 20%; padding-top: 2%; padding-bottom: 2%; background-color: purple;"><h4>YOGI</h4></div></a></center></td>
 	</tr>
 	</table>
 
