--- a/views/play.handlebars
+++ b/views/play.handlebars
@@ -11,7 +11,21 @@
 </head>
 
 <body>
-	<div>
+	<div class= "curmenu">
+		<h1>PLAY</h1>
+	</div>
+
+	<style>
+	table, th, td{
+		border: 1px solid black;
+		border-collapse: collapse;
+	}
+	th, td{
+		padding: 15px;
+	}
+	</style>
+
+	</div>
 	<table style= "width:100%">
 	<tr>
 		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
