created settings.js, made poses/settings handlebars, and edited other files as needed. Issues with links, and need to figure out settings image still. bootstrap?

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,6 +10,7 @@
 <body>
 	<div class= "curmenu">
 		<h1>PROFILE</h1>
+		<h1 id= "mySet"><a href='/settings'>SETTINGS</a></h1>
 	</div>
 
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
@@ -41,7 +42,7 @@
 	<tr>
 		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
 		<td><h2 id= "myFlow"><a href='/flow'>FLOW</a></h2></td>
-		<td><h2 id= "myPoses">POSES</h2></td>
+		<td><h2 id= "myPoses"><a href='/poses'>POSES</a></h2></td>
 	</tr>
 	</table>
 	</div>
