--- a/views/play.handlebars
+++ b/views/play.handlebars
@@ -30,7 +30,7 @@
 	<tr>
 		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
 		<td><h2 id= "myFlow"><a href='/flow'>FLOW</a></h2></td>
-		<td><h2 id= "myPoses">POSES</h2></td>
+		<td><h2 id= "myPoses"><a href='/poses'>POSES</a></h2></td>
 	</tr>
 	</table>
 	</div>
