--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -9,25 +9,11 @@
 
 <body>
 	<div class= "curmenu">
-		<h1>PROFILE</h1>
+		<h1>POSES</h1>
 	</div>
 
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
 	
-	<table style= "width: 100%">
-	<tr>
-		<td><h4>FLOWS DONE</h4></td>
-		<td><h4>YOGA TIME</h4></td>
-		<td><h4>BREATH CYCLE</h4></td>
-	</tr>
-	</table>
-	</div>
-
-	<div>
-		<h2>FLOW HISTORY</h2>
-	</div>
-	<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showTabs=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%2333ccff&amp;src=hamm6hmfqnq9s7b2rtgl4u0a58%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style="border-width:0;" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-	<div class= "navmenu">
 	<style>
 	table, th, td{
 		border: 1px solid black;
@@ -41,7 +27,7 @@
 	<tr>
 		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
 		<td><h2 id= "myFlow"><a href='/flow'>FLOW</a></h2></td>
-		<td><h2 id= "myPoses">POSES</h2></td>
+		<td><h2 id= "myPoses"><a href='/poses'>POSES</a></h2></td>
 	</tr>
 	</table>
 	</div>
