--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -1,7 +1,4 @@
-<!doctype html>
-
-<html lang="en">
-  
+<html>
 <head>
 	<meta charset="utf-8">
 	<title>UFlow</title>
@@ -12,7 +9,7 @@
 
 <body>
 	<div class= "curmenu">
-		<h1>FLOW</h1>
+		<h1>SETTINGS</h1>
 	</div>
 
 	<style>
@@ -24,17 +21,6 @@
 		padding: 15px;
 	}
 	</style>
-	<table style= "width: 100%">
-
-
-	<tr>
-		<td><center><a href="/play"><div style="width: 20%; padding-top: 2%; padding-bottom: 2%; background-color: blue;"><h4>NOVICE</h4></div></a></center></td>
-	</tr>
-	<tr>
-		<td><center><a href="/play"><div style="width: 20%; padding-top: 2%; padding-bottom: 2%; background-color: purple;"><h4>YOGI</h4></div></a></center></td>
-	</tr>
-	</table>
-
 
 	</div>
 	<table style= "width:100%">
