put the wheel icon in

--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -10,6 +10,9 @@
 <body>
 	<div class= "curmenu">
 		<h1>POSES</h1>
+		<h1 id="mySet"><a href='/settings'> 
+			<span class="glyphicon glyphicon-cog"></span></a>
+      	</h1>
 	</div>
 
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
