--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -13,6 +13,9 @@
 <body>
 	<div class= "curmenu">
 		<h1>FLOW</h1>
+		<h1 id="mySet"><a href='/settings'> 
+			<span class="glyphicon glyphicon-cog"></span></a>
+      	</h1>
 	</div>
 
 	<style>
