--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,9 @@
 <body>
 	<div class= "curmenu">
 		<h1>PROFILE</h1>
-		<h1 id= "mySet"><a href='/settings'>SETTINGS</a></h1>
+		<h1 id="mySet"><a href='/settings'> 
+			<span class="glyphicon glyphicon-cog"></span></a>
+      	</h1>
 	</div>
 
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
