--- a/views/play.handlebars
+++ b/views/play.handlebars
@@ -12,7 +12,10 @@
 
 <body>
 	<div class= "curmenu">
-		<h1>PLAY</h1>
+		<h1 id="hPlay">PLAY</h1>
+		<h1 id="mySet"><a href='/settings'> 
+			<span class="glyphicon glyphicon-cog"></span></a>
+      	</h1>
 	</div>
 
 	<style>
