--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -9,7 +9,7 @@
 
 <body>
 	<div class= "curmenu">
-		<h1>POSES</h1>
+		<h1 id="hPoses">POSES</h1>
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1>
@@ -17,15 +17,6 @@
 
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
 	
-	<style>
-	table, th, td{
-		border: 1px solid black;
-		border-collapse: collapse;
-	}
-	th, td{
-		padding: 15px;
-	}
-	</style>
 	<table style= "width:100%">
 	<tr>
 		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
