--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -12,21 +12,12 @@
 
 <body>
 	<div class= "curmenu">
-		<h1>FLOW</h1>
+		<h1 id= "hFlow">FLOW</h1>
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1>
 	</div>
-
-	<style>
-	table, th, td{
-		border: 1px solid black;
-		border-collapse: collapse;
-	}
-	th, td{
-		padding: 15px;
-	}
-	</style>
+	
 	<table style= "width: 100%">
 
 
