--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
 
 <body>
 	<div class= "curmenu">
-		<h1>PROFILE</h1>
+		<h1 id="hProfile">PROFILE</h1>
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1>
@@ -29,17 +29,10 @@
 	<div>
 		<h2>FLOW HISTORY</h2>
 	</div>
-	<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showTabs=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%2333ccff&amp;src=hamm6hmfqnq9s7b2rtgl4u0a58%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style="border-width:0;" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+	<iframe id="myCalender" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showTabs=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%2333ccff&amp;src=hamm6hmfqnq9s7b2rtgl4u0a58%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles"></iframe>
+
 	<div class= "navmenu">
-	<style>
-	table, th, td{
-		border: 1px solid black;
-		border-collapse: collapse;
-	}
-	th, td{
-		padding: 15px;
-	}
-	</style>
 	<table style= "width:100%">
 	<tr>
 		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
