--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -23,10 +23,10 @@
 
 
 	<tr>
-		<td><center><a href="/play"><div style="width: 20%; padding-top: 2%; padding-bottom: 2%; background-color: blue;"><h4>NOVICE</h4></div></a></center></td>
+		<td><center><a href="/play"><div style="width: 600px; height: 300px; padding-top: 2%; padding-bottom: 2%; background-color: blue;"><h1>NOVICE</h1></div></a></center></td>
 	</tr>
 	<tr>
-		<td><center><a href="/play"><div style="width: 20%; padding-top: 2%; padding-bottom: 2%; background-color: purple;"><h4>YOGI</h4></div></a></center></td>
+		<td><center><a href="/play"><div style="width: 600px; height: 300px; padding-top: 2%; padding-bottom: 2%; background-color: purple;"><h1>YOGI</h1></div></a></center></td>
 	</tr>
 	</table>
 
