--- a/views/play.handlebars
+++ b/views/play.handlebars
@@ -19,6 +19,16 @@
       	</h1>
 	</div>
 
+	<div>
+		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
+		<h1 id= "myBreath">
+			<!--box with input in it-->
+
+			<button id= "myPlay" type="button" class="btn btn-default btn-lg">
+				<span class="glyphicon glyphicon-play"></span>
+			</button>	
+	</div>
+
 	<style>
 	table, th, td{
 		border: 1px solid black;
