novice play and yogi play

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,7 +36,7 @@
 	<div class= "navmenu">
 	<table style= "width:100%">
 	<tr>
-		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
+		<td><h2 id= "myProfile"><a href='/index'>PROFILE</a></h2></td>
 		<td><h2 id= "myFlow"><a href='/flow'>FLOW</a></h2></td>
 		<td><h2 id= "myPoses"><a href='/poses'>POSES</a></h2></td>
 	</tr>
