--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -13,20 +13,19 @@
 
 <body>
 	<div class= "curmenu">
-		<h1 id="hPlay">PLAY</h1>
+		<h1 id="hPlay">NOVICE PLAY</h1>
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1>
 	</div>
 
 	<div>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/BdTzZuwGEOw">
+		</iframe>
 		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
 		<h1 id= "myBreath">
 			<!--box with input in it-->
-
-			<button id= "myPlay" type="button" class="btn btn-default btn-lg">
-				<span class="glyphicon glyphicon-play"></span>
-			</button>	
+		<input type="text" id="" placeholder="">
 	</div>
 
 	<style>
@@ -42,7 +41,7 @@
 	</div>
 	<table style= "width:100%">
 	<tr>
-		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
+		<td><h2 id= "myProfile"><a href='/index'>PROFILE</a></h2></td>
 		<td><h2 id= "myFlow"><a href='/flow'>FLOW</a></h2></td>
 		<td><h2 id= "myPoses"><a href='/poses'>POSES</a></h2></td>
 	</tr>
