--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -23,10 +23,10 @@
 
 
 	<tr>
-		<td><center><a href="/play"><div style="width: 600px; height: 300px; padding-top: 2%; padding-bottom: 2%; background-color: blue;"><h1>NOVICE</h1></div></a></center></td>
+		<td><center><a href="/noviceplay"><div style="width: 600px; height: 300px; padding-top: 3.5%; padding-bottom: 2%; background-color: blue;"><h1>NOVICE</h1></div></a></center></td>
 	</tr>
 	<tr>
-		<td><center><a href="/play"><div style="width: 600px; height: 300px; padding-top: 2%; padding-bottom: 2%; background-color: purple;"><h1>YOGI</h1></div></a></center></td>
+		<td><center><a href="/yogiplay"><div style="width: 600px; height: 300px; padding-top: 3.5%; padding-bottom: 2%; background-color: purple;"><h1>YOGI</h1></div></a></center></td>
 	</tr>
 	</table>
 
@@ -34,7 +34,7 @@
 	</div>
 	<table style= "width:100%">
 	<tr>
-		<td><h2 id= "myProfile"><a href='/'>PROFILE</a></h2></td>
+		<td><h2 id= "myProfile"><a href='/index'>PROFILE</a></h2></td>
 		<td><h2 id= "myFlow"><a href='/flow'>FLOW</a></h2></td>
 		<td><h2 id= "myPoses"><a href='/poses'>POSES</a></h2></td>
 	</tr>
