francis code added

--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -16,6 +16,10 @@
       	</h1>
 	</div>
 
+	{{#each poses}}
+	<p>{{name}}</p>
+	<hr><img width= "200" height= "200" src= "{{imgURL}}"></hr>
+	{{/each}}
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
 	
 	<table style= "width:100%">
