poses page functional

--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -19,6 +19,7 @@
 	{{#each poses}}
 	<p>{{name}}</p>
 	<hr><img width= "200" height= "200" src= "{{imgURL}}"></hr>
+	<hr><iframe width="560" height="315" src="{{videoURL}}"></iframe></hr>
 	{{/each}}
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
 	
