--- a/public/css/uFlow.css
+++ b/public/css/uFlow.css
@@ -18,7 +18,7 @@ h4{
 	padding: 0px 0px 0px 350px;
 }
 .enter{
-	padding: 25px 0px 0px 100px;
+	padding: px 0px 0px 100px;
 }
 #hProfile{
 	display: inline-block;
@@ -38,12 +38,7 @@ h4{
 }
 #myBreath{
 	float: left;
-	padding: 100px 0px 50px 50px;
-}
-#myPlay{
-	width: 300px;
-	height: 300px;
-	border-radius: 50%;
+	padding: 500px 0px 50px 50px;
 }
 #mySet{
 	display: inline-block;
@@ -60,7 +55,15 @@ h4{
 }
 .navmenu{
      text-align: center;
-
+}
+.myPlay{
+	position: absolute;
+	left: 50%;
+	right: 50%;
+	padding: 100px 0px 0px 0px;
+}
+#play{
+	font-size: 300px;
 }
 table, th, td{
 	border: 1px solid black;
