--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -9,6 +9,9 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/uFlow.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/noviceplay.js"></script>
 </head>
 
 <body>
@@ -19,13 +22,18 @@
       	</h1>
 	</div>
 
+	<div class="myPlay">
+		<i class="glyphicon glyphicon-play-circle b-play" id="play"></i>
+	</div>
+
 	<div>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/BdTzZuwGEOw">
-		</iframe>
+		<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BdTzZuwGEOw">
+		</iframe>-->
 		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
 		<h1 id= "myBreath">
 			<!--box with input in it-->
 		<input type="text" id="" placeholder="">
+
 	</div>
 
 	<style>
