--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -17,9 +17,9 @@
 	</div>
 
 	{{#each poses}}
-	<p>{{name}}</p>
-	<hr><img width= "200" height= "200" src= "{{imgURL}}"></hr>
-	<hr><iframe width="560" height="315" src="{{videoURL}}"></iframe></hr>
+	<p><center>{{name}}</center></p>
+	<hr><center><img width= "200" height= "200" src= "{{imgURL}}"></center></hr>
+	<hr><center><iframe width="560" height="315" src="{{videoURL}}"></iframe></center></hr>
 	{{/each}}
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
 	
