--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,9 +20,9 @@
 	
 	<table style= "width: 100%">
 	<tr>
-		<td><h4>FLOWS DONE</h4></td>
-		<td><h4>YOGA TIME</h4></td>
-		<td><h4>BREATH CYCLE</h4></td>
+		<td><h4>FLOWS DONE: 12</h4></td>
+		<td><h4>YOGA TIME: 1hr 42min</h4></td>
+		<td><h4>BREATH CYCLE: 8sec</h4></td>
 	</tr>
 	</table>
 	</div>
@@ -32,7 +32,6 @@
 	</div>
 
 	<iframe id="myCalender" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showTabs=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%2333ccff&amp;src=hamm6hmfqnq9s7b2rtgl4u0a58%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles"></iframe>
-
 	<div class= "navmenu">
 	<table style= "width:100%">
 	<tr>
