breaath cycle dropdown

--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -22,18 +22,24 @@
       	</h1>
 	</div>
 
-	<div class="myPlay">
-		<i class="glyphicon glyphicon-play-circle b-play" id="play"></i>
-	</div>
-
 	<div>
-		<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BdTzZuwGEOw">
-		</iframe>-->
 		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
 		<h1 id= "myBreath">
-			<!--box with input in it-->
-		<input type="text" id="" placeholder="">
+		<form action="/action_page.php">
+ 		 	<select name="time">
+    			<option value="6 sec">6 sec</option>
+    			<option value="8 sec">8 sec</option>
+    			<option value="10 sec">10 sec</option>
+    			<option value="12 sec">12 sec</option>
+  			</select>
+  			<input type="submit">
+		</form>
+		<br><br>
+		<p> Click on the Play button when you are ready </p>
+	</div>
 
+	<div class="myPlay">
+		<i class="glyphicon glyphicon-play-circle b-play" id="play"></i>
 	</div>
 
 	<style>
