calender and flow page updated

--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -22,10 +22,12 @@
 	<table style= "width: 100%">
 
 	<tr>
-		<td><center><a href="/noviceplay"><div style="width: 600px; height: 300px; padding-top: 8%; padding-bottom: 2%; background-color: blue;"><h1>NOVICE</h1></div></a></center></td>
+		<td><center><a href="/noviceplay"><div style="width: 600px; height: 300px; padding-top: 5%; padding-bottom: 2%; background-color: blue;"><h1>NOVICE 
+			(Click here if you do not practice yoga regularly)</h1></div></a></center></td>
 	</tr>
 	<tr>
-		<td><center><a href="/yogiplay"><div style="width: 600px; height: 300px; padding-top: 8%; padding-bottom: 2%; background-color: purple;"><h1>YOGI</h1></div></a></center></td>
+		<td><center><a href="/yogiplay"><div style="width: 600px; height: 300px; padding-top: 5%; padding-bottom: 2%; background-color: purple;"><h1>YOGI 
+			(Click here if you have a regular yoga practice)</h1></div></a></center></td>
 	</tr>
 	</table>
 
