--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,8 @@
 		<h2>FLOW HISTORY</h2>
 	</div>
 
-	<iframe id="myCalender" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showTabs=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%2333ccff&amp;src=hamm6hmfqnq9s7b2rtgl4u0a58%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles"></iframe>
+	<h2>Calender</h2>
+	<center><img src="/calender.jpg" alt="Calender" style="width:541px;height:467px;"></center>
 	<div class= "navmenu">
 	<table style= "width:100%">
 	<tr>
