--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -12,6 +12,10 @@
 	<div class= "curmenu">
 		<h1>SETTINGS</h1>
 	</div>
+	
+	<br><br>
+	<center><button href="/" type="button" class="btn btn-default">Logout</button></center> 
+	<br><br>
 
 	</div>
 	<table style= "width:100%">
