flows done and time updates now. w out push unfortunately

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,9 +20,9 @@
 	
 	<table style= "width: 100%">
 	<tr>
-		<td><h4>FLOWS DONE: 12</h4></td>
-		<td><h4>YOGA TIME: 1hr 42min</h4></td>
-		<td><h4>BREATH CYCLE: 8sec</h4></td>
+		<td><h4>FLOWS DONE: {{flowsdone}}</h4></td>
+		<td><h4>YOGA TIME: {{yogatime}}min</h4></td>
+		<td><h4>BREATH CYCLE: {{breathCycle}}</h4></td>
 	</tr>
 	</table>
 	</div>
