--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -14,7 +14,9 @@
 	</div>
 	
 	<br><br>
-	<center><button href="/" type="button" class="btn btn-default">Logout</button></center> 
+	<center>
+	<button onclick="window.location.href='/'" type="button" class="btn btn-default">Logout</button>
+	</center> 
 	<br><br>
 
 	</div>
