--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -19,14 +19,14 @@
 		<h1 id="hPlay">NOVICE PLAY</h1>
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
-      	</h1>
+      	</h1>	
 	</div>
 
 	<div>
 		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
 		<h1 id= "myBreath">
 		<form action="/action_page.php">
- 		 	<select name="time">
+ 		 	<select id = "time" name="time">
     			<option value="6 sec">6 sec</option>
     			<option value="8 sec">8 sec</option>
     			<option value="10 sec">10 sec</option>
