--- a/public/css/uFlow.css
+++ b/public/css/uFlow.css
@@ -12,13 +12,13 @@ h4{
 	padding: 100px 0px 0px 0px; 
 }
 .form{
-	padding: 50px 700px 0px 300px;
+	padding:20px;
 }
 .checkbox{
-	padding: 0px 0px 0px 350px;
+	padding: 0px 0px 0px 50px;
 }
 .enter{
-	padding: px 0px 0px 100px;
+	padding: 0px 0px 0px 175px;
 }
 #hProfile{
 	display: inline-block;
