--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,8 +24,9 @@
 	</div>
 	<div class="checkbox">
 		<label><input type="checkbox">Remember me</label>
+	</div>
 	<div class="enter">
-		<a href="/index" type="button" class="btn btn-default">Enter</button>
+		<a href="/index" type="button" class="btn btn-default">Enter</a>
 	</div>
 
 </body>
