--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -26,7 +26,7 @@
 		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
 		<h1 id= "myBreath">
 		<form action="/action_page.php">
- 		 	<select name="time">
+ 		 	<select id = "time" name="time">
     			<option value="6 sec">6 sec</option>
     			<option value="8 sec">8 sec</option>
     			<option value="10 sec">10 sec</option>
