--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,6 +10,9 @@
 
 <body>
 	<div class= "curmenu">
+		<h1 id="myInfo"><a href='/information'>
+			<span class="glyphicon glyphicon-info-sign"></span></a>
+		</h1>
 		<h1 id="hProfile">PROFILE</h1>
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
