--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -10,7 +10,10 @@
 
 <body>
 	<div class= "curmenu">
-		<h1>SETTINGS</h1>
+		<h1 id="myInfo"><a href='/information'>
+			<span class="glyphicon glyphicon-info-sign"></span></a>
+		</h1>
+		<h1 id= "hSet">SETTINGS</h1>
 	</div>
 	
 	<br><br>
