--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -13,6 +13,9 @@
 
 <body>
 	<div class= "curmenu">
+		<h1 id="myInfo"><a href='/information'>
+			<span class="glyphicon glyphicon-info-sign"></span></a>
+		</h1>
 		<h1 id= "hFlow">FLOW</h1>
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
