--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -16,6 +16,9 @@
 
 <body>
 	<div class= "curmenu">
+		<h1 id="myInfo"><a href='/information'>
+			<span class="glyphicon glyphicon-info-sign"></span></a>
+		</h1>
 		<h1 id="hPlay">NOVICE PLAY</h1>
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
