filled info page

--- a/views/information.handlebars
+++ b/views/information.handlebars
@@ -15,6 +15,26 @@
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1>
 	</div>
+
+	<div class= "info">
+		<h3>
+		Yoga is a Hindu spiritual discipline, including breath control, simple meditation, and the adoption of specific bodily postures ॐ
+		</h3>
+
+		<h3>
+		To start a workout, select FLOW from the menu and pick your level.
+		</h3>
+
+		<h3>
+		We ask for your breath cycle so that you can be mindful of your breath and how it changes ॐ
+		Breath cycle= inhale time (seconds)+ exhale time (seconds) 
+		</h3>
+
+		<h3>
+		If you need more guidance in the postures, consult the Poses pageॐ
+		</h3>
+
+	</div>
 	
 	</div>
 	<table style= "width:100%">
