--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,8 +34,12 @@
 		<h2>FLOW HISTORY</h2>
 	</div>
 
-	<h2>Calender</h2>
-	<center><img src="/calender.jpg" alt="Calender" style="width:541px;height:467px;"></center>
+	<div class ="calender">
+		<h2>Calender</h2>
+		<img src="/calender.jpg" alt="Calender">
+	</div>
+
+	<br></br>
 	<div class= "navmenu">
 	<table style= "width:100%">
 	<tr>
