--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,16 +36,17 @@
 
 	<div class ="calender">
 		<h2>Calender</h2>
-		<img src="/calender.jpg" alt="Calender">
+		<img src="/calender.jpg" alt="Calender" width=320px height=300px">
 	</div>
 
 	<br></br>
-	<div class= "navmenu">
+
+	<div>
 	<table style= "width:100%">
 	<tr>
-		<td><h2 id= "myProfile"><a href='/index'>PROFILE</a></h2></td>
-		<td><h2 id= "myFlow"><a href='/flow'>FLOW</a></h2></td>
-		<td><h2 id= "myPoses"><a href='/poses'>POSES</a></h2></td>
+		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
+		<td><h4 id= "myFlow"><a href='/flow'>FLOW</a></h4></td>
+		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
 	</tr>
 	</table>
 	</div>
