took out calender text, centered calender

--- a/public/css/uFlow.css
+++ b/public/css/uFlow.css
@@ -27,6 +27,8 @@ h4{
 .calender{
 	width: 320px;
 	height: 300px;
+	margin-right: auto;
+	margin-left: auto;
 }
 #hProfile{
 	display: inline-block;
