--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -12,9 +12,11 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/noviceplay.js"></script>
+	<script src="js/uFlow.js"></script>
 </head>
 
 <body>
+	<header>
 	<div class= "curmenu">
 		<h1 id="myInfo"><a href='/information'>
 			<span class="glyphicon glyphicon-info-sign"></span></a>
@@ -23,7 +25,18 @@
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1>	
+      	<div class= hamburger>
+      		<div class= hammenu></div>
+      		<div class= hammenu></div>
+      		<div class= hammenu></div>
+      		<ul class= "myMenu">
+      			<li><a href= '/index'>PROFILE</a></li>
+      			<li><a href='/flow'>FLOW</a></li>
+      			<li><a href='/poses'>POSES</a></li>
+      		</ul>
+      	</div>
 	</div>
+	</header>
 
 	<div>
 		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
