--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,9 +6,13 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/uFlow.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/uFlow.js"></script>
 </head>
 
 <body>
+	<header>
 	<div class= "curmenu">
 		<h1 id="myInfo"><a href='/information'>
 			<span class="glyphicon glyphicon-info-sign"></span></a>
@@ -17,7 +21,18 @@
 		<h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1>
+      	<div class= hamburger>
+      		<div class= hammenu></div>
+      		<div class= hammenu></div>
+      		<div class= hammenu></div>
+      		<ul class= "myMenu">
+      			<li><a href= '/index'>PROFILE</a></li>
+      			<li><a href='/flow'>FLOW</a></li>
+      			<li><a href='/poses'>POSES</a></li>
+      		</ul>
+      	</div>
 	</div>
+	</header>
 
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
 	
