--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -6,15 +6,30 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/uFlow.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/uFlow.js"></script>
 </head>
 
 <body>
+	<header>
 	<div class= "curmenu">
 		<h1 id="myInfo"><a href='/information'>
 			<span class="glyphicon glyphicon-info-sign"></span></a>
 		</h1>
 		<h1 id= "hSet">SETTINGS</h1>
+		<div class= hamburger>
+      		<div class= hammenu></div>
+      		<div class= hammenu></div>
+      		<div class= hammenu></div>
+      		<ul class= "myMenu">
+      			<li><a href= '/index'>PROFILE</a></li>
+      			<li><a href='/flow'>FLOW</a></li>
+      			<li><a href='/poses'>POSES</a></li>
+      		</ul>
+      	</div>
 	</div>
+	</header>
 	
 	<br><br>
 	<center>
