removed lower nav menu, fixed issue with hamburger function name and play button function name, removed info/settings options

--- a/views/information.handlebars
+++ b/views/information.handlebars
@@ -15,17 +15,19 @@
 	<header>
 	<div class= "curmenu">
 		<h1 id= "hInfo">INFORMATION</h1>
-		<h1 id="mySet"><a href='/settings'> 
+		<!-- <h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
-      	</h1>
+      	</h1> -->
       	<div class= hamburger>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<ul class= "myMenu">
       			<li><a href= '/index'>PROFILE</a></li>
-      			<li><a href='/flow'>FLOW</a></li>
-      			<li><a href='/poses'>POSES</a></li>
+      			<li><a href= '/flow'>FLOW</a></li>
+      			<li><a href= '/poses'>POSES</a></li>
+      			<li><a href= '/information'>INFORMATION</a></li>
+      			<li><a href= '/'>LOGOUT</a></li>
       		</ul>
       	</div>
 	</div>
@@ -52,13 +54,13 @@
 	</div>
 	
 	</div>
-	<table style= "width:100%">
+	<!-- <table style= "width:100%">
 	<tr>
 		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
 		<td><h4 id= "myFlow"><a href='/flow'>FLOW</a></h4></td>
 		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
 	</tr>
-	</table>
+	</table> -->
 	</div>
 </body>
 </html>
