--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -18,13 +18,10 @@
 <body>
 	<header>
 	<div class= "curmenu">
-		<h1 id="myInfo"><a href='/information'>
-			<span class="glyphicon glyphicon-info-sign"></span></a>
-		</h1>
 		<h1 id="hPlay">NOVICE PLAY</h1>
-		<h1 id="mySet"><a href='/settings'> 
+		<!-- <h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
-      	</h1>	
+      	</h1> -->	
       	<div class= hamburger>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
@@ -33,6 +30,8 @@
       			<li><a href= '/index'>PROFILE</a></li>
       			<li><a href='/flow'>FLOW</a></li>
       			<li><a href='/poses'>POSES</a></li>
+      			<li><a href= '/information'>INFORMATION</a></li>
+      			<li><a href= '/'>LOGOUT</a></li>
       		</ul>
       	</div>
 	</div>
@@ -68,13 +67,13 @@
 	</style>
 
 	</div>
-	<table style= "width:100%">
+	<!-- <table style= "width:100%">
 	<tr>
 		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
 		<td><h4 id= "myFlow"><a href='/flow'>FLOW</a></h4></td>
 		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
 	</tr>
-	</table>
+	</table> -->
 	</div>
 </body>
 </html>
