--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -18,13 +18,10 @@
 <body>
 	<header>
 	<div class= "curmenu">
-	<h1 id="myInfo"><a href='/information'>
-			<span class="glyphicon glyphicon-info-sign"></span></a>
-		</h1>
 		<h1 id="hPlay">YOGI PLAY</h1>
-		<h1 id="mySet"><a href='/settings'> 
+		<!-- <h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
-      	</h1>
+      	</h1> -->
       	<div class= hamburger>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
@@ -33,6 +30,8 @@
       			<li><a href= '/index'>PROFILE</a></li>
       			<li><a href='/flow'>FLOW</a></li>
       			<li><a href='/poses'>POSES</a></li>
+      			<li><a href= '/information'>INFORMATION</a></li>
+      			<li><a href= '/'>LOGOUT</a></li>
       		</ul>
       	</div>
 	</div>
