--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -17,13 +17,10 @@
 <body>
 	<header>
 	<div class= "curmenu">
-		<h1 id="myInfo"><a href='/information'>
-			<span class="glyphicon glyphicon-info-sign"></span></a>
-		</h1>
 		<h1 id= "hFlow">FLOW</h1>
-		<h1 id="mySet"><a href='/settings'> 
+		<!-- <h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
-      	</h1>
+      	</h1> -->
       	<div class= hamburger>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
@@ -32,6 +29,7 @@
       			<li><a href= '/index'>PROFILE</a></li>
       			<li><a href='/flow'>FLOW</a></li>
       			<li><a href='/poses'>POSES</a></li>
+      			<li><a href= '/information'>INFORMATION</a></li>
       		</ul>
       	</div>
 	</div>
@@ -50,7 +48,7 @@
 	</table>
 
 
-	</div>
+	<!-- </div>
 	<table style= "width:100%">
 	<tr>
 		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
@@ -58,6 +56,6 @@
 		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
 	</tr>
 	</table>
-	</div>
+	</div> -->
 </body>
 </html>
