--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,21 +14,19 @@
 <body>
 	<header>
 	<div class= "curmenu">
-		<h1 id="myInfo"><a href='/information'>
-			<span class="glyphicon glyphicon-info-sign"></span></a>
-		</h1>
 		<h1 id="hProfile">PROFILE</h1>
-		<h1 id="mySet"><a href='/settings'> 
+		<!-- <h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
-      	</h1>
+      	</h1> -->
       	<div class= hamburger>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<ul class= "myMenu">
       			<li><a href= '/index'>PROFILE</a></li>
-      			<li><a href='/flow'>FLOW</a></li>
-      			<li><a href='/poses'>POSES</a></li>
+      			<li><a href= '/flow'>FLOW</a></li>
+      			<li><a href= '/poses'>POSES</a></li>
+      			<li><a href= '/information'>INFORMATION</a></li>
       		</ul>
       	</div>
 	</div>
@@ -57,13 +55,13 @@
 
 	<div>
 	<table style= "width:100%">
-	<tr>
+	<!-- <tr>
 		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
 		<td><h4 id= "myFlow"><a href='/flow'>FLOW</a></h4></td>
 		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
 	</tr>
 	</table>
-	</div>
+	</div> -->
 </body>
 
 </html>
