--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -14,9 +14,6 @@
 <body>
 	<header>
 	<div class= "curmenu">
-		<h1 id="myInfo"><a href='/information'>
-			<span class="glyphicon glyphicon-info-sign"></span></a>
-		</h1>
 		<h1 id= "hSet">SETTINGS</h1>
 		<div class= hamburger>
       		<div class= hammenu></div>
@@ -26,6 +23,7 @@
       			<li><a href= '/index'>PROFILE</a></li>
       			<li><a href='/flow'>FLOW</a></li>
       			<li><a href='/poses'>POSES</a></li>
+      			<li><a href= '/information'>INFORMATION</a></li>
       		</ul>
       	</div>
 	</div>
