--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -52,8 +52,12 @@
 		<p> Click on the Play button when you are ready </p>
 	</div>
 
-	<div class="myPlay">
-		<i class="glyphicon glyphicon-play-circle b-play" id="play"></i>
+	<div class= "myPlay">
+		<button type= "button">
+		<i class= "glyphicon glyphicon-play" id="play"></i>
+		<i class= "glyphicon glyphicon-pause" id="pause"></i>
+		</button>
+		<!-- <i class= "glyphicon glyphicon-pause-circle " -->
 	</div>
 
 	<style>
