--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -52,8 +52,12 @@
 		<p> Click on the Play button when you are ready </p>
 	</div>
 
-	<div class="myPlay">
-		<i class="glyphicon glyphicon-play-circle b-play" id="play"></i>
+	<div class= "myPlay">
+		<button type= "button">
+		<i class= "glyphicon glyphicon-play" id="play"></i>
+		<i class= "glyphicon glyphicon-pause" id="pause"></i>
+		</button>
+		<!-- <i class= "glyphicon glyphicon-pause-circle " -->
 	</div>
 
 	<style>
@@ -67,13 +71,13 @@
 	</style>
 
 	</div>
-	<table style= "width:100%">
+	<!-- <table style= "width:100%">
 	<tr>
 		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
 		<td><h4 id= "myFlow"><a href='/flow'>FLOW</a></h4></td>
 		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
 	</tr>
-	</table>
+	</table> -->
 	</div>
 </body>
 </html>
