--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -49,7 +49,7 @@
   			</select>
 		</form>
 		<br><br>
-		<p> Click on the Play button when you are ready </p>
+		<p> Click play to begin your audio guided flow </p>
 	</div>
 
 	<div class= "myPlay">
