--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -33,7 +33,7 @@
 	</header>
 
 	{{#each poses}}
-	<p><center>{{name}}</center></p>
+	<h6><center>{{name}}</center></h6>
 	<hr><center><img width= "200" height= "200" src= "{{imgURL}}"></center></hr>
 	<hr><center><iframe width="300" height="315" src="{{videoURL}}"></iframe></center></hr>
 	{{/each}}
