--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -38,11 +38,11 @@
 	<table style= "width: 100%">
 
 	<tr>
-		<td><center><a href="/noviceplay"><div style="width: 280px; height: 300px; padding-top: 5%; padding-bottom: 2%; background-color: blue;"><h1>NOVICE 
+		<td><center><a href="/noviceplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%;"><h1>NOVICE 
 			(Click here if you do not practice yoga regularly)</h1></div></a></center></td>
 	</tr>
 	<tr>
-		<td><center><a href="/yogiplay"><div style="width: 280px; height: 300px; padding-top: 5%; padding-bottom: 2%; background-color: purple;"><h1>YOGI 
+		<td><center><a href="/yogiplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%;"><h1>YOGI
 			(Click here if you have a regular yoga practice)</h1></div></a></center></td>
 	</tr>
 	</table>
