logout on all pages

--- a/views/poses.handlebars
+++ b/views/poses.handlebars
@@ -27,6 +27,7 @@
       			<li><a href='/flow'>FLOW</a></li>
       			<li><a href='/poses'>POSES</a></li>
       			<li><a href= '/information'>INFORMATION</a></li>
+      			<li><a href= '/'>LOGOUT</a></li>
       		</ul>
       	</div>
 	</div>
