fixed javascript placement issues in html, and case sensitivity issues that were happeneing in uFlowB as well

--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -9,9 +9,7 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/uFlow.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/uFlow.js"></script>
+	
 </head>
 
 <body>
@@ -58,5 +56,9 @@
 	</tr>
 	</table>
 	</div> -->
+
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/uflow.js"></script>
 </body>
 </html>
