--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,9 +6,7 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/uFlow.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/uFlow.js"></script>
+	
 </head>
 
 <body>
@@ -27,7 +25,7 @@
       			<li><a href= '/flow'>FLOW</a></li>
       			<li><a href= '/poses'>POSES</a></li>
       			<li><a href= '/information'>INFORMATION</a></li>
-      			<li><a href= '/'>LOGOUT</a></li>
+      			<li><a href= '/'>LOGOUT</a></li> 
       		</ul>
       	</div>
 	</div>
@@ -63,6 +61,10 @@
 	</tr>
 	</table>
 	</div> -->
+
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/uflow.js"></script>
 </body>
 
 </html>
