--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -9,10 +9,7 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/uFlow.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/yogiplay.js"></script>
-	<script src="js/uFlow.js"></script>
+	
 </head>
 
 <body>
@@ -79,5 +76,10 @@
 	</tr>
 	</table> -->
 	</div>
+
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/yogiplay.js"></script>
+	<script src="js/uflow.js"></script>
 </body>
 </html>
