made on/off button

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -12,7 +12,7 @@
 <body>
 	<header>
 	<div class= "curmenu">
-		<h1 id= "hSet">SETTINGS</h1>
+		<h1 id= "hSet">YOGI AUDITOR</h1>
 		<div class= hamburger>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
@@ -29,19 +29,12 @@
 	
 	<br><br>
 	<center>
-	<button onclick="window.location.href='/'" type="button" class="btn btn-default">Logout</button>
+	<div class = "onBut"><button type="button" class="btn btn-default">ON</button>
+	</div>
+	<div class = "offBut"><button type="button" class="btn btn-default">OFF</button>
 	</center> 
 	<br><br>
 
-	</div>
-	<table style= "width:100%">
-	<tr>
-		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
-		<td><h4 id= "myFlow"><a href='/flow'>FLOW</a></h4></td>
-		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
-	</tr>
-	</table>
-	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
