--- a/views/vnoviceplay.handlebars
+++ b/views/vnoviceplay.handlebars
@@ -15,10 +15,10 @@
 <body>
 	<header>
 	<div class= "curmenu">
-		<h1 id= "hFlow">FLOW</h1>
+		<h1 id="hPlay">NOVICE PLAY</h1>
 		<!-- <h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
-      	</h1> -->
+      	</h1> -->	
       	<div class= hamburger>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
@@ -29,39 +29,53 @@
       			<li><a href='/poses'>POSES</a></li>
       			<li><a href= '/information'>INFORMATION</a></li>
       			<li><a href= '/'>LOGOUT</a></li>
-      			<li><a href='/vnoviceplay'>noviceplay</a></li>
-      			<li><a href='/vyogiplay'>yogiplay</a></li>
-
       		</ul>
       	</div>
 	</div>
 	</header>
-	
-	<table style= "width: 100%">
 
-	<tr>
-		<td><center><a href="/noviceplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%;"><h1>NOVICE 
-			(Click here if you do not practice yoga regularly)</h1></div></a></center></td>
-	</tr>
-	<tr>
-		<td><center><a href="/yogiplay"><div style="width: 280px; height: 300px; padding-top: 3%; padding-bottom: 2%;"><h1>YOGI
-			(Click here if you have a regular yoga practice)</h1></div></a></center></td>
-	</tr>
-	</table>
+	<div>
+		<h1 id= "QBreath">HOW LONG IS YOUR BREATH CYCLE?  :</h1>
+		<h1 id= "myBreath">
+		<form action="/action_page.php">
+ 		 	<select id = "time" name="time">
+    			<option value="6 sec">6 sec</option>
+    			<option value="8 sec">8 sec</option>
+    			<option value="10 sec">10 sec</option>
+    			<option value="12 sec">12 sec</option>
+  			</select>
+		</form>
+		<br><br>
+		<p> Click to begin your audio guided flow </p>
+	</div>
 
+	<div class= "myPlay">
+		<center><iframe src="https://www.youtube.com/embed/BdTzZuwGEOw" width="300" height="315"></iframe></center>
+	</div>
 
-	<!-- </div>
-	<table style= "width:100%">
+	<style>
+	table, th, td{
+		border: 1px solid black;
+		border-collapse: collapse;
+	}	
+	th, td{
+		padding: 15px;
+	}
+	</style>
+
+	</div>
+	<!-- <table style= "width:100%">
 	<tr>
 		<td><h4 id= "myProfile"><a href='/index'>PROFILE</a></h4></td>
 		<td><h4 id= "myFlow"><a href='/flow'>FLOW</a></h4></td>
 		<td><h4 id= "myPoses"><a href='/poses'>POSES</a></h4></td>
 	</tr>
-	</table>
-	</div> -->
+	</table> -->
+	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/noviceplay.js"></script>
 	<script src="js/uflow.js"></script>
 </body>
 </html>
