centered play button, on/off button should work. just need analytics code. alt pages for week 8 are there, just need to edit for analytics

--- a/public/css/uFlow.css
+++ b/public/css/uFlow.css
@@ -86,6 +86,7 @@ h6{
     text-align: center;
 }
 .myPlay{
+	text-align:center;
 	 /*border: 5px solid black;*/
 	/*position: absolute;*/
 	/*left: 50%;*/
