--- a/views/flow.handlebars
+++ b/views/flow.handlebars
@@ -29,8 +29,8 @@
       			<li><a href='/poses'>POSES</a></li>
       			<li><a href= '/information'>INFORMATION</a></li>
       			<li><a href= '/'>LOGOUT</a></li>
-      			<li><a href='/vnoviceplay'>noviceplay</a></li>
-      			<li><a href='/vyogiplay'>yogiplay</a></li>
+      			<!-- <li><a href='/vnoviceplay'>vnoviceplay</a></li>
+      			<li><a href='/vyogiplay'>vyogiplay</a></li> -->
 
       		</ul>
       	</div>
