--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -39,5 +39,6 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/uflow.js"></script>
+	<script src="js/settings.js"></script>
 </body>
 </html>
