--- a/views/noviceplay.handlebars
+++ b/views/noviceplay.handlebars
@@ -80,6 +80,6 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/noviceplay.js"></script>
-	<script src="js/uFlow.js"></script>
+	<script src="js/uflow.js"></script>
 </body>
 </html>
