--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -38,7 +38,7 @@
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/uFlow.js"></script>
+	<script src="js/uflow.js"></script>
 	<script src="js/settings.js"></script>
 </body>
 </html>
