--- a/views/index_B.handlebars
+++ b/views/index_B.handlebars
@@ -67,7 +67,7 @@
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/uFlow.js"></script>
+	<script src="js/ham.js"></script>
 	<script type="js/index_B.js"></script>
 </body>
 
