--- a/views/information.handlebars
+++ b/views/information.handlebars
@@ -63,6 +63,6 @@
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/uFlow.js"></script>
+	<script src="js/ham.js"></script>
 </body>
 </html>
