--- a/views/yogiplay.handlebars
+++ b/views/yogiplay.handlebars
@@ -80,6 +80,6 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/yogiplay.js"></script>
-	<script src="js/uFlow.js"></script>
+	<script src="js/ham.js"></script>
 </body>
 </html>
