--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -12,7 +12,7 @@
 <body>
 	<header>
 	<div class= "curmenu">
-		<h1 id= "hInfo">INFORMATION</h1>
+		<h1 id= "hInfo">HELP</h1>
 		<!-- <h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1> -->
@@ -24,7 +24,7 @@
       			<li><a href= '/index'>PROFILE</a></li>
       			<li><a href= '/flow'>FLOW</a></li>
       			<li><a href= '/poses'>POSES</a></li>
-      			<li><a href= '/information'>INFORMATION</a></li>
+      			<li><a href= '/help'>HELP</a></li>
       			<li><a href= '/'>LOGOUT</a></li>
       		</ul>
       	</div>
