--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,7 +24,7 @@
       			<li><a href= '/index'>PROFILE</a></li>
       			<li><a href= '/flow'>FLOW</a></li>
       			<li><a href= '/poses'>POSES</a></li>
-      			<li><a href= '/information'>INFORMATION</a></li>
+      			<li id = "lHelp"><a href= '/help'>HELP</a></li>
       			<li><a href= '/'>LOGOUT</a></li> 
       		</ul>
       	</div>
