changed reference in version b to help page

--- a/views/index_B.handlebars
+++ b/views/index_B.handlebars
@@ -12,7 +12,7 @@
 <body>
 	<header>
 	<div class= "curmenu">
-		<h1 id="bHelp"><a href='/information' class= "btn btn-info btn-lg"> 
+		<h1 id="bHelp"><a href='/help' class= "btn btn-info btn-lg"> 
 			<span class="glyphicon glyphicon-question-sign"></span> Need Help</a>
       	</h1>
 		<h1 id="hProfile">PROFILE</h1>
