took out conditional for index version A

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,7 +26,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
 <body>
 	<header>
-	{{#if version}}
+	<!-- {{#if version}}
 		<div class= "curmenu">
 		<h1 id="bHelp"><a href='/information' class= "btn btn-info btn-lg"> 
 			<span class="glyphicon glyphicon-question-sign"></span> Need Help</a>
@@ -35,7 +35,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 		<!-- <h1 id="mySet"><a href='/settings'> 
 			<span class="glyphicon glyphicon-cog"></span></a>
       	</h1> -->
-      	<div class= hamburger>
+<!--       	<div class= hamburger>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
       		<div class= hammenu></div>
@@ -45,8 +45,8 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
       			<li><a href= '/poses'>POSES</a></li>
       			<li><a href= '/'>LOGOUT</a></li> 
       		</ul>
-      	</div>
-	{{else}}
+      	</div> -->
+	<!-- {{else}} -->
 		<div class= "curmenu">
 			<h1 id="hProfile">PROFILE</h1>
 			<!-- <h1 id="mySet"><a href='/settings'> 
@@ -65,7 +65,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
       			</ul>
       		</div>
 		</div>
-	{{/if}}
+	<!-- {{/if}} -->
 	</header>
 
 	<!--this makes the table go under under stuff for some rsn<div class= "progress"--> 
